--- a/.github/workflows/generate-id-tags.yml
+++ b/.github/workflows/generate-id-tags.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   generate-tags:
     runs-on: ubuntu-latest
+    timeout-minutes: 7200
     
     steps:
       - name: Checkout repository
